# OpenIPC-QML-Element

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Important_Commands.md  README.md  READ_HOW_TO_USE.md  config.ini
sdp/: sdp.sdp
src/: QmlNativeAPI.h  main.cpp
src/player/: JpegEncoder.cpp  QQuickRealTimePlayer.cpp  QQuickRealTimePlayer.h  ffmpegDecode.cpp  ffmpegDecode.h
src/wifi/: Rtp.h  WFBDefine.h  WFBProcessor.cpp  WFBReceiver.cpp
